# fastapi-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: conf.py
fastapi_project_name/: dependencies.py  main.py
fastapi_project_name/internal/schemas/: items.py  users.py
fastapi_project_name/internal/utils/: secret_key_generator.py
fastapi_project_name/routers/: admin.py  items.py  users.py
