[tool.poetry]
name = "fastapi_project_template"
version = "0.1.0"
description = "A template for FastAPI projects"
authors = ["Andrea Giansanti <andreagiansanti90@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"
sphinx-rtd-theme = "^2.0.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
fastapi-cli = "^0.0.5"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.logs.dependencies]
logging = "^0.4.9.6"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
docstr-coverage = "^2.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.format.dependencies]
black = "^23.12.0"
docformatter = "^1.7.5"

[tool.poetry.group.code_analyzer.dependencies]
pylint = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
